# agtp

./: .gitignore  NAMING.md  README.md  RELEASE_NOTES_SECURITY_HARDENING.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  VISION.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements-docs.txt  test_documents.py  test_elemen.py  test_handshake.py  test_invocation.py  test_manifest.py  test_methods.py  test_negotiation.py  test_paths.py  test_platform.py
.github/workflows/: docs.yml  test.yml
.pytest-tmp/test_force_overwrites0/: signing.pub
.pytest-tmp/test_generates_key_pair0/: signing.pub
.pytest-tmp/test_refuses_to_overwrite_with0/: signing.pub
agtp/: CHANGELOG.md  __init__.py  __main__.py  client.py  config.py  curl.py  handlers.py  handshake.py  identity.py  ids.py  intent.py  manifest.py  methods.py  migrate.py  negotiation.py  registry.py  render.py  server.py  status.py  testing.py  wire.py
agtp-go/: go.mod  registry.go  testing.go
agtp-laravel/: CHANGELOG.md  README.md  composer.json
agtp-laravel/src/: AgtpServiceProvider.php
agtp-mcp/: README.md  agtp-mcp.service  gateway.py
agtp-node/: package.json
agtp-node/src/: index.ts
agtp-php/: CHANGELOG.md  README.md  composer.json  phpunit.xml
agtp-php/src/: AgtpEndpoint.php  EndpointContext.php  EndpointError.php  EndpointResponse.php  HandlerRegistry.php  RegisteredHandler.php  Testing.php
agtp-php/tests/: EndpointShapesTest.php  HandlerRegistryTest.php
agtp-rust/: Cargo.toml
agtp-symfony/: CHANGELOG.md  README.md  composer.json
agtp-symfony/config/: services.yaml
agtp-symfony/src/: AgtpBundle.php
agtp-wordpress/: CHANGELOG.md  README.md  agtp-wordpress.php  composer.json
agtp-wordpress/src/: AgtpCliCommand.php
agtp/examples/: __init__.py  custom_methods.py
agtp_drupal/: CHANGELOG.md  INSTALL.md  README.md  agtp_drupal.info.yml  agtp_drupal.module  agtp_drupal.services.yml  composer.json
client/: __init__.py  __main__.py  core_client.py  curl.py  main.py
client/amg/: README.md  __init__.py  cli.py  composer.py  grammar.py  reserved.py  synthesis.py  validator.py
client/cli/: README.md  __init__.py  curl.py  main.py  migrate.py  propose.py
client/elemen/: README.md  __init__.py  app.py  bridge.py
core/: __init__.py  _paths.py  endpoint.py  endpoint_tiers.py  genesis.py  handshake.py  identity.py  ids.py  issuer_resolution.py  key_encoding.py  manifest.py  methods.json  methods.py  path_grammar.py  render.py  status.py  wire.py
core/gateway/: __init__.py  protocol.py
core/schemas/: CHANGELOG.md  README.md  agent-document.schema.json  endpoint-context.schema.json  endpoint-error.schema.json  endpoint-response.schema.json  gateway-handshake.schema.json  server-manifest.schema.json
docs/: CROSS_PLATFORM_SMOKE.md  agtp-dimensions-mapping.md  catalog-evolution.md  composition-handlers.md  cross-platform-smoke.md  deferred-work-register.md  documentation-status.md  endpoint-tiers.md  endpoint-toml.md  external-service-handlers.md  handler-api.md  methods.md  oauth-composition.md  openapi-import.md  path-grammar.md  propose.md  rcns.md  security-hardening.md  uri-forms.md  wire-format.md
elemen/: app.py  client.py
endpoints/: audit_summary.toml  book_room.toml  fetch_article.toml  query_catalog.toml
ietf/: CHARTER.md  README.md  draft-hood-agtp-agent-cert-00.md  draft-hood-agtp-api-00.md  draft-hood-agtp-discovery-00.md  draft-hood-agtp-log-00.md  draft-hood-agtp-merchant-identity-01.md  draft-hood-agtp-session-00.md  draft-hood-agtp-trust-00.md  draft-hood-independent-agis-01.md  draft-hood-independent-agtp-06.md  draft-hood-independent-agtp-07.md
mcp-on-agtp/: README.md  client_demo.py  gateway.py  mcp-on-agtp.service  mock_mcp_server.py  requirements.txt
mod_audit/: CHANGELOG.md  README.md  log.py
mod_cache/: README.md  backend.py  hook.py
mod_go/: go.mod
mod_node/: package.json  tsconfig.json
mod_php/: composer.json
mod_proxy/: __init__.py  handler.py
mod_python/: __main__.py  client.py
mod_rust/: Cargo.toml
registry/: __init__.py  __main__.py  main.py
runtimes/mod_rust/: Cargo.toml
runtimes/mod_rust/src/: protocol.rs
samples/: __init__.py  gateway_demo.php  gateway_demo.py  handlers.py
scripts/: agtp-deploy.sh  build_methods.py  check_markdown_links.py  methods_source.py  stage_docs.py
server/: __init__.py  __main__.py  agent_cert_ext.py  agtp-recipes.toml  agtp-server.toml  audit.py  audit_chain.py  audit_lifecycle.py  audit_records.py  builtins.md  builtins.py  cert_sessions.py  config.py  cose.py  endpoint_loader.py  endpoint_registry.py  gateway.py  handler_resolution.py  hooks.py  main.py  manifest.py  methods.py  mtls.py  negotiation.py  oauth_context.py  proposal_store.py  rcns_gate.py  rcns_state.py  run_demo.sh  schema_validation.py  signing.py  synthesis_duration.py  synthesis_runtime.py
tests/: test_agent_cert_ext.py  test_agtp_agent_cli.py  test_agtp_registry.py  test_amg.py  test_amg_composer.py  test_amg_drift.py  test_audit_chain.py  test_audit_followup.py  test_audit_records.py  test_catalog_diff.py  test_catalog_evolution.py  test_chain_inspector.py  test_chain_integrity_check.py  test_cli_grammar_check.py  test_cli_propose.py  test_core_methods.py  test_deferred_security_completion.py  test_discover_path_keyed.py  test_dispatcher_endpoints.py  test_dispatcher_validation.py  test_documents.py  test_elemen.py  test_elemen_compose.py  test_endpoint_deprecation.py  test_endpoint_loader.py  test_endpoint_registry.py  test_endpoint_spec.py  test_endpoint_tiers.py  test_external_service_handler.py  test_gateway_e2e.py  test_gateway_e2e_go.py  test_gateway_e2e_node.py  test_gateway_e2e_php.py  test_gateway_e2e_rust.py  test_gateway_phase_c.py  test_gateway_protocol.py  test_gateway_resume.py  test_gateway_server.py  test_genesis.py  test_handler_binding_alignment.py  (+53 more)
tools/: __init__.py  agtp_agent.py  agtp_genesis.py  catalog_diff.py  chain_integrity_check.py  generate_agent_cert.py  generate_signing_key.py  openapi_import.py
v1/: agent_document.py  agent_id.py  agtp-server.toml  renderer.py  run_demo.sh  wire_v2.py
(+254 files in other folders)
