[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agtp"
version = "0.3.0"
description = "Agent Transfer Protocol reference implementation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Chris Hood", email = "chris@nomotic.ai" }]
keywords = ["agtp", "agent", "protocol", "ietf"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet",
  "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://agtp.io"
Repository = "https://github.com/nomoticai/agtp"

# The repo is a monorepo of products. Each top-level Python directory
# (core, server, client, registry) is a standalone package; the AMG
# validator is duplicated under server/amg and client/amg per the
# SMTP-style client/server split (the same protocol, two distinct
# user agents).
[project.scripts]
agtp           = "client.cli.main:main"
agtp-server    = "server.main:main"
agtp-registry  = "registry.main:main"
agtp-curl      = "client.cli.curl:main"
agtp-migrate   = "client.cli.migrate:main"
agtp-amg       = "client.amg.cli:main"
elemen         = "client.elemen.app:main"

[project.optional-dependencies]
# jsonschema enables AMG Pass 8 to use the Draft 7 metaschema
# validator rather than the structural fallback. Optional; the
# package degrades gracefully when absent.
amg-schemas = ["jsonschema>=4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "server*", "client*", "registry*"]
exclude = ["tests*", "elemen*", "ietf*", "docs*", "scripts*", "mcp-on-agtp*"]
