[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agtp"
version = "0.3.0"
description = "Agent Transfer Protocol reference implementation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
  # Phase 2 endpoint-input/output validation rides on Draft 2020-12.
  "jsonschema>=4",
]
authors = [{ name = "Chris Hood", email = "chris@nomotic.ai" }]
keywords = ["agtp", "agent", "protocol", "ietf"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet",
  "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://agtp.io"
Repository = "https://github.com/nomoticai/agtp"

# The repo is a monorepo of products. Each top-level Python directory
# (core, server, client, registry) is a standalone package, following
# the SMTP-style client/server split (the same protocol, two distinct
# user agents).
[project.scripts]
agtp                = "client.cli.main:main"
agtp-server         = "server.main:main"
agtp-registry       = "registry.main:main"
agtp-curl           = "client.cli.curl:main"
agtp-migrate        = "client.cli.migrate:main"
agtp-import-openapi = "tools.openapi_import:main"
agtp-catalog-diff   = "tools.catalog_diff:main"
agtp-mod-python     = "mod_python.__main__:main"
elemen              = "client.elemen.app:main"

[project.optional-dependencies]
# pyyaml enables YAML-formatted method specs in the CLI's
# --params-file flow and the elemen drawer's "Save as File"
# button. Without it, JSON-only round-trips still work.
yaml = ["pyyaml>=6"]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "core*", "server*", "client*", "registry*",
  "agtp", "agtp.*",  # only the Python `agtp` package, not agtp-php / agtp-go / agtp-rust / agtp-node
  "samples*", "tools*", "mod_python*",
]
# Non-Python language packages never carry __init__.py so setuptools
# skips them automatically, but list them explicitly so build output
# stays quiet.
exclude = [
  "tests*", "elemen*", "ietf*", "docs*", "scripts*", "agtp-mcp*",
  "agtp-php*", "mod_php*", "agtp_drupal*",
  "agtp-go*", "mod_go*",
  "agtp-node*", "mod_node*",
  "agtp-rust*", "mod_rust*",
]
